# stark-bot

./: .dockerignore  Dockerfile  LICENSE  README.md  SOUL.md  SUPER_ROUTER_REGISTER_UPGRADE.md  TODO.md  chat-history.md  discord_tipping.db-shm  discord_tipping.db-wal  docker-compose.dev.yml  docker-compose.yml
.clawdhub/: lock.json
.do/: deploy.template.yaml
config/: defaultagents.ron
daily-voting-feature/: Cargo.toml  README.md  foundry.toml
daily-voting-feature/contracts/: DailyVoting.sol
daily-voting-feature/docs/: API.md  PULL_REQUEST.md
daily-voting-feature/migrations/: 001_create_voting_tables.sql
daily-voting-feature/script/: Deploy.s.sol
daily-voting-feature/src/: main.rs
daily-voting-feature/src/api/: handlers.rs
daily-voting-feature/src/db/: mod.rs
daily-voting-feature/src/models/: mod.rs
daily-voting-feature/src/services/: blockchain.rs  mod.rs  voting.rs
daily-voting-feature/tests/: DailyVoting.t.sol
rot/: SPECIAL_ROLES_PLAN.md
skills/: bankr.md  cloudflare_dns.md  discord.md  discord_tipping.md  image_generation.md  local_wallet.md  moltbook.md  polymarket.md  railway.md  starkbot.md  starkhub.md  super_router.md  swap.md  token_price.md  transfer.md  twitter.md  weather.md  weth.md  x402book.md
skills/polymarket/: API_REFERENCE.md  HEARTBEAT.md  SKILL.md  TRADING_EXAMPLES.md
stark-backend/: Cargo.toml  HOW_IT_WORKS.md  TODO.md
stark-frontend/: discord_tipping.db-shm  discord_tipping.db-wal  tailwind.config.js  vite.config.ts  wallet_monitor.db-shm
starkbot-web/: index.html  package-lock.json  package.json
(+191 files in other folders)
