[package]
name = "daily-voting"
version = "0.1.0"
edition = "2021"
authors = ["stark-bot contributors"]
description = "Daily post voting system with token rewards for x402book"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Ethereum/BASE interaction
alloy = { version = "0.1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hex = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[[bin]]
name = "voting-server"
path = "src/main.rs"
